# KeyPilot

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
configs/: model_config.yaml
docs/: LOSS_IMPLEMENTATION.md  N_CANDIDATES_DESIGN.md  README.md  design_principles.md  implementation_checklist.md  method.md  module_selection.md  quick_decision_guide.md
docs/images/: README.md
examples/: load_dataset_example.py  quickstart.py  test_n_candidates.py
results/valid/: eval_metrics_epoch0.json
scripts/: test.py  train.py
src/keypilot/: __init__.py
src/keypilot/agents/: __init__.py  data_generator.py  llm_client.py
src/keypilot/data/: __init__.py  dataset.py  preprocessing.py
src/keypilot/evaluation/: __init__.py  evaluator.py
src/keypilot/models/: __init__.py  decoder.py  distillation.py  encoder.py  loss.py  model.py  vlm.py
src/keypilot/training/: __init__.py  trainer.py
src/keypilot/utils/: __init__.py  config.py  logger.py  vocabulary.py
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_data.py  test_models.py
